2006-07-05  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmConsole/FvwmConsoleC.c (main): 
	* FvwmConsole/getline.c: 
	Renamed the function getline to get_line to not conflict with stdio's
	getline. (bug #3772)

2006-06-09  Scott Smedley  <ss@aao.gov.au>

	* FvwmTabs/FvwmTabs.in:
	Added "swallowIcon" option to provide visual feedback when tabber is
	going to unconditionally swallow the next window to popup.
	* FvwmTabs/FvwmTabs.pod:
	* FvwmTabs/FvwmTabs.1:
	Documented new "swallowIcon" option.
	List all mouse bindings available with the toolbar icons.

2006-05-31  Scott Smedley  <ss@aao.gov.au>

	* FvwmTabs/FvwmTabs.in:
	* FvwmTabs/FvwmTabs.pod:
	* FvwmTabs/FvwmTabs.1:
	Added feature to swallow next new window that is created.

2006-05-27  Scott Smedley  <ss@aao.gov.au>

	* FvwmTabs/ConfigFvwmTabs:
	bugfix: FvwmTabs wasn't preserving state between restarts.

2006-05-09  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* FvwmScript/Scripts/FvwmScript-ComExample.in:
	* FvwmTaskBar/Goodies.c:
	corrected typos

2006-04-26  Viktor Griph  <griph@dd.chalmers.se>

	* FvwmPager/FvwmPag
	* FvwmPager/FvwmPager.h (HandleScrollDone,list_string):
	* FvwmPager/x_pager.c (Scroll, do_scroll, HandleScrollDone): 
	Changed to pixel operation. Scrolling is summed up before sent to 
	fvwm to speed up multiple subsequent scrollings that take place faster
	than fvwm can change viewport.	

2006-04-07  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* FvwmTaskBar/FvwmTaskBar.1.in:
	added another undocumented `Pad' option description.

	* FvwmTaskBar/FvwmTaskBar.c:
	fixed typos

	* FvwmTaskBar/FvwmTaskBar.c:
	* FvwmTaskBar/Goodies.c:
	* FvwmTaskBar/Start.c:
	Because of incorrect module->namelen calculation entire
	FvwmTaskBar module was broken. _Test_ your changes before
	commits.

2006-03-21  Serge Koksharov  <gentoosiast dog yandex dot ru>

	* FvwmAnimate/FvwmAnimate.c:
	corrected delay for Zoom3D animation effect

	* FvwmConsole/FvwmConsoleC.pl.1.in:
	* FvwmConsole/FvwmConsole.1.in: